# backtester

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/backtester/: __init__.py  compare.py  config.py  engine.py  exceptions.py  results.py  synthetic.py  tracker_bridge.py  types.py
tests/: test_compare.py  test_config.py  test_engine.py  test_results.py  test_synthetic.py  test_tracker_bridge.py  test_types.py
